--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 p {
     text-align: justify;
 }
+
+.card {
+    transition: 0.5s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.10);
+
+}
+
+.btn {
+    transition: 0.5s ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(0.9);
+}
