--- a/style.css
+++ b/style.css
@@ -2,6 +2,36 @@ p {
     text-align: justify;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    transition: 0.5s ease-in-out;
+}
+
+svg {
+    transform: none;
+}
+
+svg:hover {
+    cursor: pointer;
+    animation-name: spin;
+    animation-duration: 2000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .card {
     transition: 0.5s ease-in-out;
 }
